<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_spinner_background"
                android:backgroundTint="@color/movus_renk"
                android:gravity="center_horizontal"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner2"
                    android:backgroundTint="@color/movus_renk"
                    android:prompt="@string/araba_sec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kilometre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/movus_renk">

                <EditText
                    android:id="@+id/input_km"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:autofillHints="username"
                    android:hint="@string/km"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_araba_cikis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_araba_giris"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:onClick="SQL_Insert2"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:text="@string/araba_giris" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>