<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movus_logo"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@drawable/movus_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kutu_kullaniciadi"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"

                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxStrokeColor="@color/movus_renk">

                <com.google.android.material.textfield.TextInputEditText                    android:id="@+id/input_kullaniciadi"
                    android:imeOptions="flagNoExtractUi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user_icon_foreground"
                    android:autofillHints="username"
                    android:hint="@string/kullaniciadi"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kutu_sifre"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxStrokeColor="@color/movus_renk"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_sifre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoExtractUi"
                    android:drawableStart="@drawable/pass_icon_foreground"
                    android:autofillHints="username"
                    android:hint="@string/sifre"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Beni Hatırla"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_giris"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                style="@style/AppTheme.RoundedCornerMaterialButton1"
                android:text="@string/giris" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
